@@ -50,4 +50,5 @@
 [[739, -219]]
 [[739, -219]]
 [[-774658, -365105], [-774658, 365105], [774658, -365105], [774658, 365105]]
-Total time spent: 3436
+[[-1, 0], [1, 0]]
+Total time spent: 5294
