@@ -71,3 +71,7 @@ thue(thueinit(P,1),1)
 
 \\ denominators
 thue(x^2+3, 10^12 + 39)
+
+\\ #2003 + missing solution
+p=x^28+1731*x^26+922623*x^24+191101246*x^22+20130551985*x^20+1253260615292*x^18+49888378570100*x^16+1321233290968720*x^14+23633671333922020*x^12+284346917208077022*x^10+2247402310097126980*x^8+11107629226258927789*x^6+31330156854132324561*x^4+42585395771105656706*x^2+21292697885552828353;
+thue(p,1)
